Bug 521687 - Rendering of chromium based windows freezes when other windows are kept above it
Summary: Rendering of chromium based windows freezes when other windows are kept above it
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.7.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 506731 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-06-18 20:59 UTC by Richard Tippl
Modified: 2026-07-08 13:40 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Tippl 2026-06-18 20:59:27 UTC
DESCRIPTION
I've experienced this bug specifically with chromium (chrome/brave) on Wayland and MPV.

When "keep above others" is set on MPV, chromium window rendering tends to completely freeze until you click off it and back in. Usually happens when typing a message in Discord web, but can happen on any other website.

STEPS TO REPRODUCE
0. Use Wayland
1. Open MPV and play some video on it
2. Select keep above others for MPV and keep it off to the side (either overlapping the chromium or not)
3. Interact with the chomium window, open tabs, scroll on websites, type in discord channels

OBSERVED RESULT
All works as expected.

EXPECTED RESULT
The chromium window rendering completely freezes - but only the rendering.
All interactions with the window are processed and happen, they're just not visible.

Clicking off the window forces the rendering to catch up and once again show the current state.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1

ADDITIONAL INFORMATION
I've had this exact issue a year and half ago, at that time I thought it was a chromium issue, and opened a ticket there. But it got no response.
The only way for me to not get it to freeze was to use X11 instead of wayland.

That was with:
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1

At some point, it got fixed. But there seems to be a regression again in 6.7.0. This time I can confirm when i rollback my system back to KDE 6.6.5 while keeping the same brave version, the issue fully goes away.
Comment 1 TraceyC 2026-06-19 01:02:55 UTC
I'm not able to reproduce this in Plasma built from git-master (Intel GPU), I'll keep it open so others can try to reproduce.
Comment 2 Richard Tippl 2026-06-19 06:42:27 UTC
I did forget to mention, that this is on an nvidia gpu with nvidia-open drivers.
It also in some way seems to depend on some configuration or other conditions I couldn't track down.

But since it happened first, I switched chromium based browsers, and built a new computer - the only thing that didn't change is it being nvidia, so besides nvidia possibly being a factor it shouldn't be hardware specific.

While updating to 6.7.0, I also haven't updated nvidia drivers - due to unrelated issues.
Comment 3 Richard Tippl 2026-06-19 17:38:16 UTC
Couldn't compress the video well enough to fit into 4 MB, so I'm uploading it to google drive:
https://drive.google.com/file/d/1fpNT_HXiKzEAFmW4NNKPmroPCqT-ZgpA/view?usp=drive_link

This is how the bug presents on my side.
I can reproduce it within seconds with a copy of Big Bunny (https://peach.blender.org/download/)

In short, all keyboard and mouse interactions are ignored within the window (even switching tabs, which is not displayed) until clicking off the window or when it decides to render itself.

This is the list of packages updated, during this one update cycle.
Reverting this update fixes the issue. Basically all of the relevant packages are plasma 6.7.0.

appstream (1.1.2-1 -> 1.1.3-1)
appstream-qt (1.1.2-1 -> 1.1.3-1)
kdecoration (6.6.5-1 -> 6.7.0-1)
aurorae (6.6.5-1 -> 6.7.0-1)
plasma-activities (6.6.5-1 -> 6.7.0-1)
libplasma (6.6.5-1 -> 6.7.0-1)
bluedevil (1:6.6.5-1 -> 1:6.7.0-1)
breeze-cursors (6.6.5-1 -> 6.7.0-1)
breeze (6.6.5-1 -> 6.7.0-1)
breeze-gtk (6.6.5-1 -> 6.7.0-1)
drkonqi (6.6.5-2 -> 6.7.0-1)
vapoursynth (76-1 -> 77-1)
ffmpeg (2:8.1.1-2 -> 2:8.1.2-1)
fmt (12.1.0-2 -> 12.2.0-1)
kactivitymanagerd (6.6.5-1 -> 6.7.0-1)
kde-cli-tools (6.6.5-1 -> 6.7.0-1)
kde-gtk-config (6.6.5-1 -> 6.7.0-1)
kglobalacceld (6.6.5-1 -> 6.7.0-1)
knighttime (6.6.5-1 -> 6.7.0-1)
layer-shell-qt (6.6.5-2 -> 6.7.0-1)
libkscreen (6.6.5-1 -> 6.7.0-1)
kscreenlocker (6.6.5-1 -> 6.7.0-1)
kwayland (6.6.5-1 -> 6.7.0-1)
milou (6.6.5-1 -> 6.7.0-1)
kwin (6.6.5-4 -> 6.7.0-1)
kpipewire (6.6.5-1 -> 6.7.0-1)
libksysguard (6.6.5-2 -> 6.7.0-1)
ksystemstats (6.6.5-2 -> 6.7.0-1)
ocean-sound-theme (6.6.5-1 -> 6.7.0-1)
plasma-activities-stats (6.6.5-1 -> 6.7.0-1)
qqc2-breeze-style (6.6.5-1 -> 6.7.0-1)
xdg-desktop-portal-kde (6.6.5-1 -> 6.7.0-1)
plasma-integration (6.6.5-2 -> 6.7.0-1)
plasma-workspace (6.6.5-2 -> 6.7.0-1)
kdeplasma-addons (6.6.5-1 -> 6.7.0-1)
kgamma (6.6.5-1 -> 6.7.0-1)
systemsettings (6.6.5-1 -> 6.7.0-1)
kinfocenter (6.6.5-1 -> 6.7.0-1)
kmenuedit (6.6.5-1 -> 6.7.0-1)
krdp (6.6.5-1 -> 6.7.0-1)
plasma5support (6.6.5-1 -> 6.7.0-1)
kscreen (6.6.5-1 -> 6.7.0-1)
ksshaskpass (6.6.5-1 -> 6.7.0-1)
kwallet-pam (6.6.5-1 -> 6.7.0-1)
kwayland-integration (6.6.5-1 -> 6.7.0-1)
kwrited (6.6.5-1 -> 6.7.0-1)
oxygen-cursors (6.6.5-1 -> 6.7.0-1)
oxygen (6.6.5-1 -> 6.7.0-1)
plasma-browser-integration (6.6.5-1 -> 6.7.0-1)
polkit-kde-agent (6.6.5-1 -> 6.7.0-1)
powerdevil (6.6.5-1 -> 6.7.0-1)
plasma-desktop (6.6.5-1 -> 6.7.0-1)
plasma-login-manager (6.6.5-1 -> 6.7.0-1)
plasma-nm (6.6.5-1 -> 6.7.0-1)
plasma-pa (6.6.5-1 -> 6.7.0-1)
plasma-sdk (6.6.5-1 -> 6.7.0-1)
plasma-workspace-wallpapers (6.6.5-1 -> 6.7.0-1)
plymouth-kcm (6.6.5-1 -> 6.7.0-1)
pugixml (1.15-3 -> 1.16-1)
spectacle (1:6.6.5-1 -> 1:6.7.0-1)
Comment 4 Sebastian Sauer 2026-06-19 21:02:49 UTC
I saw that happen under KDE 6.6.5 on my Arch Linux. It only happened with one user account but not with others. It happened for me sometimes when switching from Chromium to Konsole. The Chromium window die freeze for like 10 seconds and after that everything was fine again. The only difference between the account where that happened and the other accounts where it not happened was that I used oxygen including the oxygen window decoration. Not sure if related.
Comment 5 Sebastian Sauer 2026-06-19 21:06:52 UTC
That's with a Minisforum MS-A2 with buildin AMD GPU.
Comment 6 Richard Tippl 2026-06-19 21:34:32 UTC
Interesting you would see it happen on 6.6.5. Could've been a slightly different version of the same issue.
But yes, I agree there's probably some configuration option triggering this.

Back when this happened to me over a year ago, it took months before it got "fixed".
In that time, I've tried narrowing down some option that triggered it unsuccessfully, however at that time, it also didn't happen in a separate profile. (at least I think, at this point I forgot most of that troubleshooting process)

I'm open to trying to compile different commits of plasma and bisect this, but the project has so many moving parts for me to try and compile and run it without messing too much with my system. Sadly this is a blocker for me in moving to 6.7.x.
Comment 7 Peter 2026-06-20 07:00:17 UTC
Thank you so much for this update.  While I am always happy to get a new KDE update, 6.7 has broken a number of things for me in the graphics arena.  I'll try and understand this post and see what I can do to resolve on my end.  I'm lower Linux skill compared to most on this thread.  Had reached the point I thought I needed to abandon my otherwise just fine old hardware...  I would love to get this resolved and not need to abandon two machines I love using.  This update is super helpful.
Comment 8 Sebastian Sauer 2026-06-20 15:15:23 UTC
I am not on KDE 6.7.0-1 since ~2 days and seems since then I am not able to reproduce it anymore. Also not with MPV playing with keep-above active. Strange thing.

@Richard In my case I also have the "Plasma Integration" Extension in my Chromium active and also had it active before. Does the issue go away when you disable that Chromium Extension?
Comment 9 Peter 2026-06-20 15:50:57 UTC
I do not know if this comment is muddying the water and is instead a SEPARATE bug / issue.  After update to 6.7 I am not able to successfully log in at all on my 2012 iMac machine.  I get the log-in screen and I can see the dots when I type password.  After I hit return to log in, either (a) nothing happens, or (b) if I touch the power button, I get the normal black screen with spinning gear and KDE launch but I can't get past the login screen.  It returns to the login screen...

I suspect this is related to the same upstream issue with the video card in this machine.
Proton Pass would not load at all in this machine I think beginning with 6.5 update.  This is a secondary Linux machine for me so I didn't try to resolve...

On the 2011 iMac - my main Linux computer (I think same main processor but different graphics card - after 6.7 update, I now have the fast flicker on Proton Mail and did not ever have this before upgrade to 6.7.  The visual instability shows up as Proton mail loads but the app is usable otherwise.  Proton Pass and Signal give fast flicker video problem.

After 6.7 update, I've also lost bottom menu bar icons for Application Launcher and System Settings - although I think this may be a different issue.  The menus still work - hovering over the area with mouse shows they are still active, and mouse click launches each as expected; I just don't see the icon at all and the location is instead blank.

I have had ZERO trouble with any KDE application and Libre Wolf works fine.  Brave and Ungoogled Chromium have fast flicker and I stopped using on these machines.
Comment 10 Sebastian Sauer 2026-06-21 10:55:54 UTC
@Peter

> After update to 6.7 I am not able to successfully log in at all on my 2012 iMac machine.  I get the log-in screen and I can see the dots when I type password.  After I hit return to log in, either (a) nothing happens, or (b) if I touch the power button, I get the normal black screen with spinning gear and KDE launch but I can't get past the login screen.  It returns to the login screen...

Could be https://bugs.kde.org/show_bug.cgi?id=521333 which was fixed last week and will land in 6.7.1. There where some heavy regressions discovered in 6.7.0 after the 6.7.x codebase got used by a much larger user base. The last weeks "This week in Plasma" has many great details: https://blogs.kde.org/2026/06/20/this-week-in-plasma-6.7-is-here/

For this "Rendering of chromium based windows freezes when other windows are kept above it" issue:

The thing is I did only notice it for Chromium. Nothing else behave like that. Its strange that I saw it on 6.6.5 (only) while Richard seems to see it on 6.7.0 (only). I still suspect that either the window decoration or the browser integration extensions are the reason but thats a wild guess at this point in time.
Comment 11 Bug Janitor Service 2026-06-23 13:56:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9461
Comment 12 Zamundaaa 2026-06-23 17:13:33 UTC
Git commit a379d1d66f9a7902fe64e4e57a12ce50ef483968 by Xaver Hugl.
Committed on 23/06/2026 at 16:42.
Pushed by zamundaaa into branch 'master'.

scene/surfaceitem_wayland: immediately update the release point of the texture

The texture's buffer and release point will be changed before the next time it's
accessed, so keeping the old release point referenced just unnecessarily keeps a
buffer from being re-used by the client.

This works around some freezes in Chromium, which doesn't deal well with buffers
being kept referenced by KWin after it sets a different one on the surface.
Related: bug 521960

M  +4    -0    src/scene/surfaceitem_wayland.cpp
M  +5    -0    src/scene/texture.cpp
M  +1    -0    src/scene/texture.h

https://invent.kde.org/plasma/kwin/-/commit/a379d1d66f9a7902fe64e4e57a12ce50ef483968
Comment 13 Zamundaaa 2026-06-23 19:18:03 UTC
Git commit 83e413ab71aac79c14de7e90e941fb2a0b314477 by Xaver Hugl.
Committed on 23/06/2026 at 17:26.
Pushed by zamundaaa into branch 'Plasma/6.7'.

scene/surfaceitem_wayland: immediately update the release point of the texture

The texture's buffer and release point will be changed before the next time it's
accessed, so keeping the old release point referenced just unnecessarily keeps a
buffer from being re-used by the client.

This works around some freezes in Chromium, which doesn't deal well with buffers
being kept referenced by KWin after it sets a different one on the surface.
Related: bug 521960


(cherry picked from commit a379d1d66f9a7902fe64e4e57a12ce50ef483968)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +4    -0    src/scene/surfaceitem_wayland.cpp
M  +5    -0    src/scene/texture.cpp
M  +1    -0    src/scene/texture.h

https://invent.kde.org/plasma/kwin/-/commit/83e413ab71aac79c14de7e90e941fb2a0b314477
Comment 14 Zamundaaa 2026-07-08 13:40:51 UTC
*** Bug 506731 has been marked as a duplicate of this bug. ***