scene/surfaceitem_wayland: immediately update the release point of the texture

The texture's buffer and release point will be changed before the next time it's
accessed, so keeping the old release point referenced just unnecessarily keeps a
buffer from being re-used by the client.

This works around some freezes in Chromium, which doesn't deal well with buffers
being kept referenced by KWin after it sets a different one on the surface.

BUG: 521687
BUG: 521960