src/scene/texture.h
@@ -26,6 +26,7 @@ public:
     QSize size() const;
     bool isFloatingPoint() const;
     std::shared_ptr<SyncReleasePoint> releasePoint() const;
+    void setReleasePoint(const std::shared_ptr<SyncReleasePoint> &releasePoint);
 
     virtual void attach(GraphicsBuffer *buffer, const Region &region, const std::shared_ptr<SyncReleasePoint> &releasePoint) = 0;
     virtual void upload(const QImage &image, const Rect &region) = 0;
